# rosdyn

./: .gitignore
rdyn_core/: CMakeLists.txt  README.md  package.xml  rdyn_coreConfig.cmake.in
rdyn_core/cmake_config/: rdyn_coreConfig.cmake
rdyn_core/include/rdyn_core/: primitives.h  spacevect_algebra.h  urdf_parser.h
rdyn_core/include/rdyn_core/internal/: primitives_impl.h  types.h
rdyn_core/test/: rdyn_speed_test.cpp  test.cpp
