<?xml version="2.0"?>
<package format="2">
  <name>rdyn_core</name>
  <version>0.0.0</version>
  <description>The rdyn_core package</description>


  <maintainer email="manuel.beschi@unibs.it">Manue Beschi</maintainer>
  <maintainer email="nicola.pedrocchi@stiima.cnr.it">Nicola Pedrocchi</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/CNR-STIIMA-IRAS/rosdyn_core</url>

  <author email="manuel.beschi@unibs.it">Manuel beschi</author>

  <buildtool_depend>cmake</buildtool_depend>

  
  <depend>urdfdom</depend>
  <depend>cnr_control_toolbox</depend>
  <export>
  </export>
</package>
